--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Landing Page</title>
 </head>
 <body>
@@ -15,18 +16,19 @@
             <li>header link three</li>
         </ul>
     </div>
+    <div class="hero">
+        <!--main content-->
+        <h1>This website is awesome</h1>
+        <p>This website has some subtext that goes here under the main title.
+            It's a smaller font and the color is lower contrast.
+        </p>
+        <button>Sign up</button>
+        <div class="placeholder">this is a placeholder for an image</div>
+    </div>
 
-    <!--main content-->
-    <h1>This website is awesome</h1>
-    <p>This website has some subtext that goes here under the main title.
-        It's a smaller font and the color is lower contrast.
-    </p>
-    <button>Sign up</button>
-    <div class="placeholder">this is a placeholder for an image</div>
-
-    <!--second main -->
+    <!--main part -->
     <h2>Some random information.</h2>
-    <div class="4-squares">
+    <div class="four-squares">
         <div class="sq1">1</div>
         <div class="sq2">2</div>
         <div class="sq3">3</div>
@@ -34,19 +36,27 @@
     </div>
 
     <!--quote part-->
-    <h2>This is an inspiring quote, or a testimonial from a
-        customer. Maybe it's just filling up space, or maybe people will actually read it.
-        Who knows? All I know is that it looks nice.
-    </h2>
-    <p>-Thor, God of Thunder</p>
+    <div class="quote">
+        <h2>This is an inspiring quote, or a testimonial from a
+            customer. Maybe it's just filling up space, or maybe people will actually read it.
+            Who knows? All I know is that it looks nice.
+        </h2>
+        <p>-Thor, God of Thunder</p>
+    </div>
+
 
     <!--cta part-->
-    <h3>Call to action! It's time!</h3>
-    <p>Sign up for our product by clicking that button right over there!</p>
-    <button>Sign up</button>
+    <div class="call-to-action">
+        <h3>Call to action! It's time!</h3>
+        <p>Sign up for our product by clicking that button right over there!</p>
+        <button>Sign up</button>
+    </div>
 
     <!--footer-->
-    <p>Copyright R The Odin project 2021</p>
+    <div class="footer">
+        <p>Copyright © The Odin Project 2021</p>
+    </div>
+    
 
 </body>
 </html>
